--- a/style/style.css
+++ b/style/style.css
@@ -137,6 +137,44 @@ h1, h2, h4, h5 {
   color: #999;
 }
 
+@-webkit-keyframes shadow-pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
+            box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+            box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+  }
+}
+
+@keyframes shadow-pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
+            box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+            box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+  }
+}
+
+.call-pulse {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  text-align: center;
+  line-height: 70px;
+  font-size: 25px;
+  color: #fff;
+  border-radius: 50%;
+  bottom: 20px;
+  right: 20px;
+  background: #28a745;
+  -webkit-animation: shadow-pulse 3s infinite;
+          animation: shadow-pulse 3s infinite;
+}
+
 .addres {
   display: -webkit-box;
   display: -ms-flexbox;
