--- a/style/classes.scss
+++ b/style/classes.scss
@@ -125,6 +125,25 @@ h1, h2, h4, h5 {
 
 }
 
+.addres {
+    display: flex;
+    padding: 20px 0;
+    li {
+        max-width: 210px;
+        display: flex;
+        padding: 0 7px;
+        i {
+            font-size: 32px;
+            margin-right: 15px;
+            color: #f6994b;
+        }
+        a {
+            font-weight: 700;
+            color: #000;
+        }
+    }
+}
+
 @keyframes shadow-pulse
 {
   0% {
