--- a/style/style.css
+++ b/style/style.css
@@ -137,6 +137,32 @@ h1, h2, h4, h5 {
   color: #999;
 }
 
+.addres {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px 0;
+}
+
+.addres li {
+  max-width: 210px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 7px;
+}
+
+.addres li i {
+  font-size: 32px;
+  margin-right: 15px;
+  color: #f6994b;
+}
+
+.addres li a {
+  font-weight: 700;
+  color: #000;
+}
+
 @-webkit-keyframes shadow-pulse {
   0% {
     -webkit-box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
@@ -173,31 +199,6 @@ h1, h2, h4, h5 {
   background: #28a745;
   -webkit-animation: shadow-pulse 3s infinite;
           animation: shadow-pulse 3s infinite;
-}
-
-.addres {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 20px 0;
-}
-
-.addres li {
-  max-width: 210px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0 7px;
-}
-
-.addres li i {
-  font-size: 32px;
-  margin-right: 15px;
-  color: #f6994b;
-}
-
-.addres li a {
-  font-weight: 700;
 }
 
 .header {
