--- a/style/style.css
+++ b/style/style.css
@@ -168,10 +168,18 @@ h1, h2, h4, h5 {
   0% {
     -webkit-box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
             box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(-15px);
+            transform: translateY(-15px);
   }
   100% {
     -webkit-box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
             box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
@@ -179,10 +187,18 @@ h1, h2, h4, h5 {
   0% {
     -webkit-box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
             box-shadow: 0 0 0 0px rgba(40, 167, 69, 0.5);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(-15px);
+            transform: translateY(-15px);
   }
   100% {
     -webkit-box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
             box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
@@ -200,6 +216,91 @@ h1, h2, h4, h5 {
   background: #28a745;
   -webkit-animation: shadow-pulse 3s infinite;
           animation: shadow-pulse 3s infinite;
+}
+
+.modal.active {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.modal.active .call {
+  border-radius: .3rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: #fff;
+  width: 100%;
+  max-width: 500px;
+  position: relative;
+}
+
+.modal.active .call h5 {
+  font-size: 22px;
+  padding: 1rem;
+  border-bottom: 1px solid #e9ecef;
+}
+
+.modal.active .call form {
+  padding: 1rem;
+}
+
+.modal.active .call form input {
+  height: 55px;
+  width: 100%;
+  padding: .375rem .75rem;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+}
+
+.modal.active .call form p {
+  margin-top: .25rem;
+  font-size: 12px;
+}
+
+.modal.active .call form button {
+  font-weight: 700;
+  font-size: 15px;
+  border: none;
+  padding: 10px 33px;
+  line-height: 1.5;
+  text-transform: capitalize;
+  border-radius: 50px;
+  letter-spacing: .5px;
+  color: #fff;
+  background: #f6994b;
+  border: 1px solid #f6994b;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  margin-top: 1rem;
+}
+
+.modal.active .call form button:hover {
+  color: #f6994b;
+  background: #fff;
+}
+
+.modal.active .call span {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 0px 7px;
+  cursor: pointer;
+  color: #999;
+}
+
+.modal.active .call span:hover {
+  color: #000;
 }
 
 .header {
@@ -1565,6 +1666,22 @@ footer .privacy ul li:last-child a:before {
   }
   .addres li:last-child {
     margin-bottom: 0;
+  }
+  .modal.active .call {
+    max-width: 320px;
+  }
+  .modal.active .call h5 {
+    font-size: 18px;
+  }
+  .modal.active .call form input {
+    height: 40px;
+  }
+  .modal.active .call form p {
+    font-size: 10px;
+  }
+  .modal.active .call form button {
+    padding: 8px 23px;
+    font-size: 15px;
   }
   .container {
     max-width: 540px;
