--- a/style/classes.scss
+++ b/style/classes.scss
@@ -175,6 +175,8 @@ h1, h2, h4, h5 {
     right: 20px;
     background: #28a745;
     animation: shadow-pulse 3s infinite;
+    cursor: pointer;
+    display: block;
 }
 
 
