--- a/style/classes.css
+++ b/style/classes.css
@@ -3,6 +3,7 @@ html {
   font-size: 16px;
   line-height: 1.5;
   color: #545454;
+  scroll-behavior: smooth;
 }
 
 body, * {
@@ -220,6 +221,10 @@ h1, h2, h4, h5 {
   display: block;
 }
 
+.modal {
+  display: none;
+}
+
 .modal.active {
   position: fixed;
   width: 100%;
@@ -304,4 +309,20 @@ h1, h2, h4, h5 {
 .modal.active .call span:hover {
   color: #000;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #CDCDCD;
+}
+
+/* Handle on hover */
 /*# sourceMappingURL=classes.css.map */
