--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@ html {
   font-size: 16px;
   line-height: 1.5;
   color: #545454;
+  scroll-behavior: smooth;
 }
 
 body, * {
@@ -220,6 +221,10 @@ h1, h2, h4, h5 {
   display: block;
 }
 
+.modal {
+  display: none;
+}
+
 .modal.active {
   position: fixed;
   width: 100%;
@@ -305,6 +310,21 @@ h1, h2, h4, h5 {
   color: #000;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #CDCDCD;
+}
+
+/* Handle on hover */
 .header {
   height: 100vh;
 }
@@ -665,6 +685,50 @@ main .about-box .about .about-list__item div i {
 
 main .about-box .about .about-list__item div h5 {
   font-size: 14px;
+}
+
+main .cars {
+  background: #f9f9f9;
+  padding: 100px 0;
+}
+
+main .cars .container ul {
+  padding-top: 40px;
+  max-height: 500px;
+  overflow-y: scroll;
+  padding-bottom: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+main .cars .container ul li {
+  width: 100%;
+  max-width: 25%;
+  padding: 0 15px;
+}
+
+main .cars .container ul li .inner {
+  width: 100%;
+  background: white;
+  border: 1px #bebebe73 solid;
+  border-radius: 5px;
+  text-align: center;
+  margin-bottom: 9px;
+  min-height: 60px;
+  cursor: pointer;
+}
+
+main .cars .container ul li .inner img {
+  margin-top: 10px;
+  width: 100%;
+  max-width: 60px;
+  max-height: 40px;
+  margin-bottom: 10px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 main .ourservice {
@@ -1777,6 +1841,9 @@ footer .privacy ul li:last-child a:before {
   main .welcome-box .list__item div {
     margin-bottom: 40px;
   }
+  main .cars .container ul li {
+    max-width: 50%;
+  }
   main .portfolio ul li {
     max-width: 270px;
   }
@@ -1884,6 +1951,9 @@ footer .privacy ul li:last-child a:before {
   }
   main .about-box__image, main .about-box__slider {
     padding: 0;
+  }
+  main .cars .container ul li .inner {
+    height: 60px;
   }
   main .ourservice {
     padding: 65px 0;
