--- a/style/classes.scss
+++ b/style/classes.scss
@@ -52,6 +52,25 @@ h1, h2, h4, h5 {
     }
 }
 
+.call-btn {
+    font-weight: 700;
+    font-size: 15px;
+    border: none;
+    padding: 10px 33px;
+    line-height: 1.5;
+    text-transform: capitalize;
+    border-radius: 50px;
+    letter-spacing: .5px;
+    color: #fff;
+    background: #f6994b;
+    border: 1px solid #f6994b;
+    transition: all .3s;
+    &:hover {
+        color: #f6994b;
+        background: #fff;
+    }
+}
+
 .menu {
     display: flex;
     &__item {
@@ -129,6 +148,8 @@ h1, h2, h4, h5 {
 
 .addres {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 20px 0;
     z-index: 100;
     li {
@@ -143,6 +164,9 @@ h1, h2, h4, h5 {
         a {
             font-weight: 700;
             color: #000;
+        }
+        button {
+            height: 45px;
         }
     }
 }
@@ -221,25 +245,6 @@ h1, h2, h4, h5 {
                     margin-top: .25rem;
                     font-size: 12px;
                 }
-                button {
-                    font-weight: 700;
-                    font-size: 15px;
-                    border: none;
-                    padding: 10px 33px;
-                    line-height: 1.5;
-                    text-transform: capitalize;
-                    border-radius: 50px;
-                    letter-spacing: .5px;
-                    color: #fff;
-                    background: #f6994b;
-                    border: 1px solid #f6994b;
-                    transition: all .3s;
-                    margin-top: 1rem;
-                    &:hover {
-                        color: #f6994b;
-                        background: #fff;
-                    }
-                }
             }
             span {
                 position: absolute;
@@ -252,9 +257,14 @@ h1, h2, h4, h5 {
                     color: #000;
                 }
             }
+            .call-btn {
+                margin-top: 1rem;
+            }
         }   
     }
 }
+
+
 
 ::-webkit-scrollbar {
     width: 10px;
