--- a/style/media.scss
+++ b/style/media.scss
@@ -311,6 +311,7 @@
 
         .addres {
             flex-direction: column;
+            align-items: flex-start;
             li {
                 max-width: 100%;
                 margin-bottom: 30px;
@@ -412,7 +413,7 @@
 
         .header {
             nav {
-                top: 150px;
+                top: 240px;
             }
         }
 
